[gd_scene load_steps=4 format=3 uid="uid://dfwbcaguvm6uk"]

[ext_resource type="Script" path="res://main/Main.gd" id="1_fovjg"]
[ext_resource type="PackedScene" uid="uid://x4n6mgw3c6i4" path="res://main/content-pages/DiscoveryContent.tscn" id="2_7ebra"]
[ext_resource type="PackedScene" uid="uid://b2kh2kbsvdyyy" path="res://main/content-pages/CreationContent/CreationContent.tscn" id="2_vnfgv"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fovjg")

[node name="SearchTimout" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Main" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Sidebar" type="Panel" parent="VBoxContainer/Main"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Main/Sidebar"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0666667, 0.0666667, 0.0666667, 1)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Main/Sidebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Main/Sidebar/MarginContainer"]
layout_mode = 2

[node name="Discover" type="Button" parent="VBoxContainer/Main/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Discover"

[node name="Create" type="Button" parent="VBoxContainer/Main/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Create"

[node name="Content" type="Panel" parent="VBoxContainer/Main"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Main/Content"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Main/Content"]
clip_contents = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="DiscoverContent" parent="VBoxContainer/Main/Content/MarginContainer" instance=ExtResource("2_7ebra")]
layout_mode = 2

[node name="CreationContent" parent="VBoxContainer/Main/Content/MarginContainer" instance=ExtResource("2_vnfgv")]
visible = false
layout_mode = 2

[connection signal="timeout" from="SearchTimout" to="." method="_on_search_timout_timeout"]
[connection signal="pressed" from="VBoxContainer/Main/Sidebar/MarginContainer/VBoxContainer/Discover" to="." method="_on_discover_pressed"]
[connection signal="pressed" from="VBoxContainer/Main/Sidebar/MarginContainer/VBoxContainer/Create" to="." method="_on_create_pressed"]
